--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,11 @@ flutter:
   - assets/logo.png
   - assets/logo2.png
   - assets/logo3.png
+  - assets/drink.png
+  - assets/drink2.png
+  - assets/food.png
+  - assets/food2.png
+  - assets/profile.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
